add image files processing

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {
     "Collapsed": "false"
    },
@@ -11,12 +11,25 @@
     "from pymongo import MongoClient\n",
     "import json\n",
     "from collections import Counter\n",
-    "import glob"
+    "import glob\n",
+    "import os\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "images_dir = Path('./images')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "Collapsed": "false"
    },
@@ -38,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "Collapsed": "false"
    },
@@ -68,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "6587"
+       "6600"
       ]
      },
      "execution_count": 5,
@@ -88,6 +101,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = [r for r in db['dlarchiveresults'].find() if 'status' in r and (r['status'] == 'exists' or r['status'] == 'downloaded')]\n",
+    "len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = [r for r in db['dlarchiveresults'].find() if 'status' in r and r['status'] == 'skip_content_type']\n",
+    "len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "Collapsed": "false"
@@ -96,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "132"
+       "0"
       ]
      },
      "execution_count": 8,
@@ -105,7 +164,7 @@
     }
    ],
    "source": [
-    "results = [r for r in db['dlarchiveresults'].find() if 'status' in r and (r['status'] == 'exists' or r['status'] == 'downloaded')]\n",
+    "results = [r for r in db['dlarchiveresults'].find() if 'archive_status' in r and r['archive_status'] == 'archive_not_found']\n",
     "len(results)"
    ]
   },
@@ -119,59 +178,10 @@
     {
      "data": {
       "text/plain": [
-       "103"
+       "Counter()"
       ]
      },
      "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results = [r for r in db['dlarchiveresults'].find() if 'status' in r and r['status'] == 'skip_content_type']\n",
-    "len(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "537"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results = [r for r in db['dlarchiveresults'].find() if 'archive_status' in r and r['archive_status'] == 'archive_not_found']\n",
-    "len(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'exists': 131,\n",
-       "         'downloaded': 1,\n",
-       "         'skip_content_type': 103,\n",
-       "         'invalid_content_type': 3})"
-      ]
-     },
-     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,6 +306,85 @@
    ],
    "source": [
     "Counter([p['id'] for p in all_posts]).most_common()[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'.jpg': 11071, '.png': 7728, '.gif': 128})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter([os.path.splitext(name)[1] for _, _, files in os.walk(images_dir) for name in files])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "# Download results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "# df_dl_preview_results = pd.DataFrame.from_records(dl_preview_results)\n",
+    "# df_dl_preview_results.loc[(df_dl_preview_results['status'] != 'exists') &\n",
+    "#                           (df_dl_preview_results['status'] != 'invalid_url') &\n",
+    "#                           (~df_dl_preview_results['status'].isnull()) &\n",
+    "#                           (df_dl_preview_results['status'] != 'downloaded')].to_csv('./dl_preview_results.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "# df_dl_thumbnail_results = pd.DataFrame.from_records(dl_thumbnail_results)\n",
+    "# df_dl_thumbnail_results.loc[(df_dl_thumbnail_results['status'] != 'exists') &\n",
+    "#                             (df_dl_thumbnail_results['status'] != 'invalid_url') &\n",
+    "#                             (~df_dl_thumbnail_results['status'].isnull()) &\n",
+    "#                             (df_dl_thumbnail_results['status'] != 'downloaded')].to_csv('./dl_thumbnail_results.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "# df_dl_external_link_results = pd.DataFrame.from_records(dl_external_link_results)\n",
+    "# df_dl_external_link_results.loc[(df_dl_external_link_results['status'] != 'exists') &\n",
+    "#                           (df_dl_external_link_results['status'] != 'invalid_url') &\n",
+    "# #                           (df_dl_external_link_results['status'] != 'not_found') &\n",
+    "# #                           (df_dl_external_link_results['status'] != 'http_error') &\n",
+    "#                           (~df_dl_external_link_results['status'].isnull()) &\n",
+    "#                           (~df_dl_external_link_results['status'].str.contains('skip_')) &\n",
+    "#                           (df_dl_external_link_results['status'] != 'downloaded')].to_csv('./dl_external_link_results.csv', index=False)"
    ]
   },
   {
@@ -506,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
