--- a/reddit_crawler.ipynb
+++ b/reddit_crawler.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# !pip install praw\n",
@@ -13,8 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import requests_cache\n",
@@ -23,8 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import praw\n",
@@ -37,8 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "mongo = MongoClient('172.17.0.1', 27017)\n",
@@ -48,8 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "credentials = \"\"\n",
@@ -60,8 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "reddit = praw.Reddit(client_id=credentials['client_id'],\n",
@@ -73,8 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "class PRAWJSONEncoder(json.JSONEncoder):\n",
@@ -95,7 +109,7 @@
     "        return raw.insert_one(json.loads(json.dumps(submission, cls=PRAWJSONEncoder)))\n",
     "    else:\n",
     "        return ''\n",
-    "    \n",
+    "\n",
     "def submissions_iter (r, sort, limit):\n",
     "    if sort == 'top_all':\n",
     "        return reddit.subreddit(r).top('all', limit=limit)\n",
@@ -110,8 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "# crawler_queue = [\n",
@@ -128,12 +144,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86d464a220744ff3a573df88328af1ea",
+       "model_id": "13de43a68b844f0cb0dd942f93eb2efd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df026a43e43f4b86b421a033450ae6e9",
+       "model_id": "a0266fdba08c49dcab612a7b5f9b92b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e75bbba1ce13451795a86c0ead85e291",
+       "model_id": "004647240dc349209b41e342b2f45b25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
@@ -223,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
