--- a/reddit_digest.ipynb
+++ b/reddit_digest.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "Collapsed": "false"
    },
@@ -85,7 +85,7 @@
     "        'external_link',\n",
     "        'source',\n",
     "        'source_url',\n",
-    "        'duplicated_post',\n",
+    "        'duplicated_posts',\n",
     "        'tags',\n",
     "        'media_type',\n",
     "        'labels'\n",
@@ -112,7 +112,9 @@
     "        self.source = 'Reddit'\n",
     "        self.source_url = f'https://www.reddit.com/{s[\"subreddit_name_prefixed\"]}'\n",
     "\n",
-    "        self._crosspost = Submission(s['crosspost_parent_list'][0], self.post_id) if 'crosspost_parent_list' in s and len(s['crosspost_parent_list']) > 0 else None\n",
+    "        self._crosspost = (Submission(s['crosspost_parent_list'][0], self.post_id)\n",
+    "                           if 'crosspost_parent_list' in s and len(s['crosspost_parent_list']) > 0\n",
+    "                           else None)\n",
     "\n",
     "    def digest (self):\n",
     "        return {a:getattr(self, a) for a in Submission._attrs}\n",
@@ -147,15 +149,16 @@
     "            return ''\n",
     "\n",
     "    @property\n",
-    "    def duplicated_post (self):\n",
+    "    def duplicated_posts (self):\n",
+    "        duplicated_posts = []\n",
     "        if self._duplicated_post:\n",
-    "            return self._duplicated_post\n",
+    "            duplicated_posts.append(self._duplicated_post)\n",
     "        if self._crosspost:\n",
-    "            return self._crosspost.post_id\n",
+    "            duplicated_posts.append(self._crosspost.post_id)\n",
     "        if 'viz.wtf' in self.external_link:\n",
     "            wtfviz_id = [t for t in self.external_link.split('/') if t.isdigit()]\n",
-    "            return f'tumblr/wtf-viz/{wtfviz_id}'\n",
-    "        return ''\n",
+    "            duplicated_posts.append(f'tumblr/wtf-viz/{wtfviz_id}')\n",
+    "        return duplicated_posts\n",
     "\n",
     "    @property\n",
     "    def tags (self):\n",
@@ -215,7 +218,11 @@
     "        try:\n",
     "            if 'thumbnail' in self._s:\n",
     "                if not self._s['thumbnail'].startswith('http'):\n",
-    "                    if not (self._s['thumbnail'] == 'default' or self._s['thumbnail'] == 'self' or self._s['thumbnail'] == 'spoiler' or self._s['thumbnail'] == 'nsfw' or self._s['thumbnail'] == 'image'):\n",
+    "                    if not (self._s['thumbnail'] == 'default' or\n",
+    "                            self._s['thumbnail'] == 'self' or\n",
+    "                            self._s['thumbnail'] == 'spoiler' or\n",
+    "                            self._s['thumbnail'] == 'nsfw' or\n",
+    "                            self._s['thumbnail'] == 'image'):\n",
     "                        print(f\"Reddit submission thumbnail invalid url: {self.id} {self._s['thumbnail']}\")\n",
     "                    return {\n",
     "                        'url': '',\n",
@@ -256,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "Collapsed": "false"
    },
@@ -273,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "Collapsed": "false"
    },
@@ -281,7 +288,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "198b23b2013b4a889e3da17a491d7b8a",
+       "model_id": "bf5b7e6687f24742ac226bf437e89f85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,13 +313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('5e36b8a188ff1ac1a2751292'),\n",
+       "{'_id': ObjectId('5e3ae2b6c8ae73016fbfaea6'),\n",
        " 'id': '4f927p',\n",
        " 'post_id': 'reddit/dataisugly/4f927p',\n",
        " 'datetime': '2016-04-17T23:25:13',\n",
@@ -328,13 +337,13 @@
        " 'external_link': 'http://imgur.com/(null)',\n",
        " 'source': 'Reddit',\n",
        " 'source_url': 'https://www.reddit.com/r/dataisugly',\n",
-       " 'duplicated_post': '',\n",
+       " 'duplicated_post': [],\n",
        " 'tags': [],\n",
        " 'media_type': 'text',\n",
        " 'labels': {'auto': []}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "Collapsed": "false"
    },
@@ -353,10 +362,10 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7f15072a7ec8>"
+       "<pymongo.results.DeleteResult at 0x7f50bfe16640>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
