--- a/reddit_pushshift_crawler.ipynb
+++ b/reddit_pushshift_crawler.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import requests_cache\n",
@@ -13,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import praw\n",
@@ -28,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "mongo = MongoClient('172.17.0.1', 27017)\n",
@@ -41,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "crawler_queue = [\n",
@@ -52,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "def digest_submission (submission):\n",
@@ -74,7 +84,7 @@
     "        print(reply.status_code)\n",
     "        print(json.dumps(payload))\n",
     "    return reply.json()['data']\n",
-    "    \n",
+    "\n",
     "def retrieve (r, before_epoch, limit=200):\n",
     "    api = PushshiftAPI(reddit)\n",
     "    submissions = api.search_submissions(before=before_epoch, subreddit=r, limit=limit)\n",
@@ -103,12 +113,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0771e3f8007b4f669012d788918236df",
+       "model_id": "3c29ec33add24634b7ed8d8e4ca98ebd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +153,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "# Merge with reddit-raw"
    ]
@@ -149,7 +163,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "credentials = \"\"\n",
@@ -161,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "reddit = praw.Reddit(client_id=credentials['client_id'],\n",
@@ -173,8 +191,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "class PRAWJSONEncoder(json.JSONEncoder):\n",
@@ -204,13 +224,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "120519b6f48740bc96fdc8d090c09b4b",
+       "model_id": "2895fb68787f4b509e032ed7ef464747",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,12 +258,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c753ddeede34b4dac201ef337976c6f",
+       "model_id": "e4e88537042a4d61a8f0fcaf2c673873",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,7 +292,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
@@ -289,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
