--- a/tumblr_digest.ipynb
+++ b/tumblr_digest.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
@@ -19,8 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "mongo = MongoClient('172.17.0.1', 27017)\n",
@@ -31,8 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "from collections.abc import MutableMapping, Sequence\n",
@@ -60,8 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "class Post ():\n",
@@ -81,7 +89,7 @@
     "        'media_type',\n",
     "        'labels'\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    def __init__ (self, p):\n",
     "        self._p = p\n",
     "        self.id = p['id']\n",
@@ -91,38 +99,38 @@
     "        self.num_comments = p['note_count']\n",
     "        self.source = p['blog']['name']\n",
     "        self.source_url = p['blog']['url']\n",
-    "          \n",
+    "\n",
     "    def digest (self):\n",
     "        return {a:getattr(self, a) for a in Post._attrs}\n",
     "\n",
     "    @property\n",
     "    def datetime (self):\n",
     "        return datetime.fromtimestamp(self._p['timestamp']).isoformat()\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def content (self):\n",
     "        if 'caption' in self._p:\n",
     "            return bs(self._p['caption'], 'html.parser').get_text()\n",
     "        else:\n",
     "            return ''\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def tags (self):\n",
     "        return self._p['tags']\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def labels (self):\n",
     "        return {\n",
     "            'auto': labels_from_tags(self.tags)\n",
     "        }\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def media_type (self):\n",
     "        if self.preview['url'] == '':\n",
     "            return self._p['type']\n",
     "        else:\n",
     "            return 'image'\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def preview (self):\n",
     "        if 'photos' in self._p:\n",
@@ -150,7 +158,7 @@
     "                        'width': img['data-orig-width'],\n",
     "                        'height': img['data-orig-height'],\n",
     "                    }\n",
-    "        \n",
+    "\n",
     "        print(f'Tumblr posts missing photos: {self._p[\"id\"]}')\n",
     "        print()\n",
     "        return {\n",
@@ -158,7 +166,7 @@
     "            'width': 0,\n",
     "            'height': 0\n",
     "        }\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def thumbnail (self):\n",
     "        if 'photos' in self._p:\n",
@@ -179,8 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "def digest_all_posts ():\n",
@@ -192,13 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be121be60a694fc98c32c1642e6d45c8",
+       "model_id": "0289e23f27cf4a0eb3ae004442f360a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
@@ -331,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
